--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 h3 {
-
+  font-size: 1.875em;
 }
 
 .font-medium {
@@ -48,7 +48,7 @@ h3 {
 
 .logo-nav>img {
   margin-top: 1.5em;
-  width: 126.66px;
+  width: 8em;
 }
 
 .hamburger {
@@ -77,15 +77,15 @@ h3 {
   height: 0.75em;
 }
 
+nav ul {
+  display: none;
+}
+
 /* Sections */
 
 header {
   background-image: url("../images/stars.png"), linear-gradient(#113259 10%, #b4dbe1 80%);
   color: white;
-}
-
-nav ul {
-  display: none;
 }
 
 .top-section {
@@ -109,27 +109,27 @@ nav ul {
 }
 
 .intro {
-  margin-top: 48px;
+  margin-top: 3em;
   text-align: center;
 }
 
 .intro>p {
-  margin-top: 16px;
-  padding: 0 16px;
+  margin-top: 1em;
+  padding: 0 1em;
 }
 
 .video {
   width: 90%;
-  height: 160px;
-  margin: 35px 0 47px 0;
+  height: 10em;
+  margin: 2.125em 0 3em 0;
   position: relative;
   transform: rotate(-6deg);
 }
 
 .video>img:first-of-type {
   position: absolute;
-  width: 65px;
-  left: 15px;
+  width: 4.0625em;
+  left: 0.9375em;
 }
 
 .video>img:nth-of-type(2) {
@@ -154,25 +154,222 @@ nav ul {
   top: 120px;
 }
 
-/* .parallax {
-  position: relative;
-  width: 100%;
-  height: 300px;
-} */
-
-
 .container {
-  width: 100vw;
-  height: 330px;
+  height: 20.625em;
   overflow: hidden;
 }
+
 .cover {
   width: 100%;
-  height: 400px;
+  height: 25em;
   object-fit: cover;
   object-position: 50% 50%;
 }
 
 main {
+  width: 100%;
+  position: relative;
+  background-image: linear-gradient(#fff, #b4dbe1);
+}
 
+.donate {
+  position: absolute;
+  background: white;
+  border-radius: .5em;
+  width: 22.5em;
+  height: auto;
+  top: -1.5625em;
+  left: 50%;
+  margin-left: -11.25em;
+  color: #113259;
+  padding: 1.5em 0.5em;
+  box-shadow: 0 4px 10px rgba(0,0,0,.1);
+}
+
+.donate>h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+
+.donate>p {
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+}
+
+form>label {
+  background: #edf2f7;
+  border: 1px solid #e2e8f0;
+  border-radius: 0.5em;
+  padding: 0.75em 0;
+  width: 10em;
+  margin: 0 0.3125em 0.5em 0.125em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+input[type=radio]:checked + label {
+    background: #113259;
+    color: white;
+}
+
+input[type=text] {
+  font-size: 1em;
+  width: 20.5em;
+  height: 3em;
+  padding: 0 0.625em;
+  background: #edf2f7;
+  border-radius: 0.5em;
+  border: 1px solid #e2e8f0;
+  color: white;
+}
+
+input[type=text]::placeholder {
+  color: #113259;
+  font-family: 'Montserrat';
+}
+
+input[type=text]:focus {
+  background: #113259;
+}
+
+input[type=text]:focus::-webkit-input-placeholder {
+    color: white;
+}
+
+form>img {
+  width: 20.5em;
+  margin: 1.5em 0;
+}
+
+.btn {
+  background: #dc582a;
+  padding: 1em 1.5em;
+  width: 20.5em;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  border-radius: 625em;
+}
+
+.leaderboard {
+  padding-top: 30.5em;
+}
+
+.leaderboard>h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.875em;
+  color: #113259;
+}
+
+.search-filter {
+  margin: 2em 0;
+  padding: 0 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-transform: uppercase;
+  color: #113259;
+  font-size: 0.875em;
+}
+
+.search-filter>a {
+  /* width: 9.25rem;
+  height: 2.5rem; */
+  padding: 0.5rem 1.5rem;
+  background: #fff;
+  border-radius: 625em;
+  text-decoration: none;
+  color: #113259;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 10px rgba(0,0,0,.2);
+}
+
+.search-filter>a>span {
+  padding-right: 1em;
+}
+
+.filter {
+  margin-top: 1rem;
+  width: 16.45rem;
+  height: 2.3125rem;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 625em;
+  display: flex;
+  align-items: center;
+  color: #4a5568;
+}
+
+.filter>label {
+  padding: 0.5rem 1rem;
+}
+
+.filter>input[type=radio]:first-of-type + label {
+  color: #000;
+}
+
+.filter>input[type=radio]:checked + label {
+    background: #fff;
+    color: #113259;
+    padding: 0.5rem 1rem;
+    border-radius: 625em;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0,0,0,.2);
+}
+
+.donations {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.donation {
+  position: relative;
+  background: white;
+  margin-top: 1em;
+  width: 22.4375em;
+  display: flex;
+  flex-direction: column;
+  padding-left: 80px;
+  border-radius: .375em;
+  color: #113259;
+}
+
+.donation>img {
+  position: absolute;
+  top: 1em;
+  left: 0;
+  width: 2.5em;
+  margin-left: 1em;
+}
+
+.donation>h4 {
+  font-size: 1.125em;
+  width: 60%;
+  padding-top: 0.5em;
+}
+
+.donation>.amount-trees {
+  background: #518360;
+  color: #fff;
+  width: fit-content;
+  padding: 5px;
 }
