--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,16 @@ header {
   color: white;
 }
 
+.header-search {
+  background: none;
+  position: absolute;
+  /* background-image: linear-gradient(#b4dbe1 10%, transparent 80%); */
+}
+
+.main-search {
+  background-image: linear-gradient(#b4dbe1 10%, transparent 80%);
+}
+
 .top-section {
   background: #b4dbe1;
   color: #113259;
@@ -475,9 +485,8 @@ main>img:first-of-type {
 .project {
   background: white;
   padding: 1em;
-  margin: 1em 0 0;
+  margin: 1em 1em 0 1em;
   border-radius: .5em;
-  width: 21.4375em;
   position: relative;
 }
 
@@ -495,7 +504,7 @@ main>img:first-of-type {
   font-size: 1.25em;
   color: white;
   text-transform: uppercase;
-  margin-top: 3em;
+  margin: 3em 0 0 1em;
 }
 
 .location-country {
