--- a/styles/style.css
+++ b/styles/style.css
@@ -246,13 +246,29 @@ header div:nth-of-type(3)>img:nth-of-type(4) {
   top: 7.5em;
 }
 
-/* Cuts off edges of header image */
-div:nth-of-type(4) {
+/* Parallax container */
+header>section {
+  width: 100%;
+  position: relative;
   height: 20.625em;
+  display: flex;
+  justify-content: center;
+}
+
+header>section>h2 {
+  position: absolute;
+}
+
+/* Cuts off edges of header image */
+header>section>div {
+  position: absolute;
+  height: 20.625em;
+  z-index: 2;
 }
 
 /* Fit image inside container (div) */
-div:nth-of-type(4)>img {
+header>section>div>img {
+  margin-top: 6em;
   width: 100%;
   height: 25em;
   object-fit: cover;
@@ -277,6 +293,7 @@ main {
   color: #113259;
   padding: 1.5em 0.5em;
   box-shadow: 0 4px 10px rgba(0,0,0,.1);
+  z-index: 3;
 }
 
 .donate>h3 {
