--- a/styles/style.css
+++ b/styles/style.css
@@ -55,26 +55,27 @@ h1, h2, h3, h4, a:not(.anchor-exception) {
 div[role=banner]{
   width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding: 0 1em;
+  padding: 0 1em 0 4em;
 }
 
 div[role=banner]>div:first-of-type {
-  width: 80%;
-  margin-top: 1.5em;
+  width: 20em;
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 div[role=banner]>div>img{
   width: 8em;
   height: 2em;
-  margin-left: 6.75em;
 }
 
 /* Hamburger */
 
 div[role=banner]>div:nth-of-type(2) {
-  width: 20%;
+  width: 4em;
   margin-top: 1em;
   display: flex;
   justify-content: flex-end;
