--- a/styles/style.css
+++ b/styles/style.css
@@ -184,7 +184,7 @@ nav>div>img:nth-of-type(2) {
 
 /* Header */
 header {
-  background-image: url("../images/stars.png"), linear-gradient(#113259 10%, #b4dbe1 80%);
+  background-image: url("../images/stars.png"), linear-gradient(var(--primary-bg-color) 10%, #b4dbe1 80%);
   color: var(--txt-light);
   position: relative;
   overflow: hidden;
@@ -266,7 +266,7 @@ header>div:nth-of-type(3) {
   width: 100%;
   height: 100vh;
   position: fixed;
-  background-image: url("../images/stars.png"), linear-gradient(#113259, #416894);
+  background-image: url("../images/stars.png"), linear-gradient(var(--primary-bg-color), #416894);
   top: 0;
   left: 0;
   z-index: 99999;
