--- a/styles/style.css
+++ b/styles/style.css
@@ -18,14 +18,11 @@
 /* Defaults */
 html {
   scroll-behavior: smooth;
-  height: -webkit-fill-available;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 input, button {
@@ -113,7 +110,7 @@ nav {
   right: 0;
   width: 100%;
   height: 100vh;
-	transform: translateX(600px);
+	transform: translateX(37.5em);
 	transition: .4s;
   text-transform: uppercase;
   z-index: 99999;
@@ -283,20 +280,26 @@ header>div:nth-of-type(3).show {
   display: flex;
 }
 
+header>div:nth-of-type(3)>div {
+  width: 100%;
+  height: 12em;
+  position: relative;
+}
+
 /* Close pop-up button */
-header>div:nth-of-type(3)>button {
+header>div:nth-of-type(3)>div>button {
   background: var(--secondary-bg-color);
   width: 3rem;
   height: 3rem;
   border-radius: 625em;
   border: none;
   position: absolute;
-  top: 19rem;
-  right: 0;
+  top: -1rem;
+  right: -1rem;
   z-index: 9999;
 }
 
-header>div:nth-of-type(3)>button::after {
+header>div:nth-of-type(3)>div>button::after {
   content: "×";
   font-size: 1.875rem;
 }
@@ -308,8 +311,10 @@ header>div:nth-of-type(3)>img {
   width: 100%;
 }
 
-header>div:nth-of-type(3)>iframe {
-  height: 25%;
+header>div:nth-of-type(3)>div>iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
   z-index: 9998;
 }
 
@@ -345,7 +350,7 @@ header>section>div>img {
 main {
   width: 100%;
   position: relative;
-  background-image: linear-gradient(#fff, #b4dbe1);
+  background: linear-gradient(#fff, #b4dbe1);
 }
 
 /* Donations */
@@ -360,7 +365,7 @@ main>section:first-of-type {
   margin-left: -11.25em;
   color: var(--txt-dark);
   padding: 1.5em 0.5em;
-  box-shadow: 0 4px 10px rgba(0,0,0,.1);
+  box-shadow: 0 0.25em 0.625em rgba(0,0,0,.1);
   z-index: 3;
   text-align: center;
 }
@@ -480,7 +485,7 @@ main>section:nth-of-type(2)>div:first-of-type>a {
   color: var(--txt-dark);
   display: flex;
   align-items: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,.2);
+  box-shadow: 0 0.25em 0.625em rgba(0,0,0,.2);
 }
 
 main>section:nth-of-type(2)>div:first-of-type>a>span {
@@ -515,7 +520,7 @@ main>section:nth-of-type(2)>div:first-of-type>form>input[type=radio]:checked + l
     border-radius: 625em;
     display: flex;
     align-items: center;
-    box-shadow: 0 4px 10px rgba(0,0,0,.2);
+    box-shadow: 0 0.25em 0.625em rgba(0,0,0,.2);
 }
 
 /* Donations */
@@ -689,7 +694,7 @@ main>section:nth-of-type(3)>section>article {
   padding: 1em;
   border-radius: .5em;
   position: relative;
-  margin-top: 16px;
+  margin-top: 1em;
   color: var(--txt-dark);
 }
 
@@ -756,7 +761,7 @@ main>section:nth-of-type(4)>ul>li>a>img {
   width: 2.5em;
 }
 
-iframe {
+main>section:nth-of-type(4)>iframe {
   width: 100%;
   height: 20em;
   margin-top: 2em;
@@ -790,32 +795,312 @@ footer>ul>li>a {
   color: var(--txt-light);
 }
 
+/* Styling for iPhone SE */
+@media only screen and (max-width: 320px) {
+  main>section:first-of-type {
+    width: 90%;
+    left: 0;
+    margin: 0 1em;
+  }
+
+  main>section:first-of-type>form>label {
+    width: 7.7em;
+  }
+
+  main>section:first-of-type>form>input[type=text] {
+    width: 16em;
+  }
+
+  main>section:first-of-type>form>img {
+    width: 100%;
+  }
+
+  header>div:nth-of-type(4) {
+    margin: 2.125em 0;
+  }
+
+  header>div:nth-of-type(4)>img:first-of-type {
+    position: absolute;
+    width: 3em;
+    left: 0.9375em;
+    top: -2em;
+    z-index: 9999;
+  }
+
+  header>div:nth-of-type(4)>img:nth-of-type(2) {
+    position: absolute;
+    width: 16em;
+    left: 2em;
+  }
+
+  header>div:nth-of-type(4)>img:nth-of-type(3) {
+    position: absolute;
+    width: 2em;
+    z-index: 999;
+    left: 9em;
+    top: 3.5625em;
+  }
+
+  header>div:nth-of-type(4)>img:nth-of-type(4) {
+    position: absolute;
+    width: 19em;
+    z-index: 999;
+    left: 0.625em;
+    top: 7.5em;
+  }
+
+  main>section:nth-of-type(2)>div:nth-of-type(2)>article {
+    width: 18.4375em;
+  }
+
+  main>section:nth-of-type(2)>div:nth-of-type(2)>a {
+    width: 18.4375em;
+  }
+
+  main>section:nth-of-type(3){
+    text-align: center;
+  }
+
+  main>section:nth-of-type(3)>section {
+    text-align: left;
+  }
+
+  main>section:nth-of-type(3)>div:first-of-type>img {
+    z-index: 9999;
+  }
+
+  main>section:nth-of-type(3)>div:first-of-type {
+    width: 18.3125em;
+    height: 18.3125em;
+  }
+}
+
 /* START OF STORE PAGE */
-/* .store>header {
+
+/* Header */
+.header-store {
+  display: flex;
+  flex-direction: column;
+  background: var(--secondary-bg-color);
+}
+
+.header-store * {
+  font-weight: var(--font-black);
+}
+
+/* Top bar */
+.header-store>div:first-of-type {
+  width: 100%;
+  background: #ccc;
+  color: var(--txt-light);
+  font-size: 1em;
+  padding: 0;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+}
+
+.header-store>div:first-of-type>a {
+  padding: 0.85em 1.375em;
+  text-decoration: none;
+  color: var(--txt-light);
+}
+
+/* Banner */
+.header-store>section {
+  width: 100%;
+  height: 30.5em;
+  background: url('../images/store-header-bg.png');
+  background-size: cover;
+  background-position: center;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+  text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.4);
+}
+
+.header-store>section>div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #685858;
+  opacity: 0.4;
+  z-index: 1;
+}
+
+.header-store>section>h1 {
+  font-size: 2.125em;
+  z-index: 2;
+  line-height: 1.2;
+  margin: 0 0 0.5em;
+}
+
+.header-store>section>p {
+  z-index: 2;
+  margin: 0 1.375em;
+}
+
+/* Navigation */
+.header-store>nav {
+  background: var(--secondary-bg-color);
+  width: 100%;
+  height: 5.3125rem;
+  transform: none;
+  position: relative;
+  padding: 0.5em 0;
+}
+
+.header-store>nav>ul {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 0 0 0.5em;
+}
+
+.header-store>nav>ul>li:first-of-type>a>img {
+  width: 13.375rem;
+}
+
+.header-store>nav>ul>li {
+  margin: 0;
+}
+
+.header-store>nav>ul>li:nth-of-type(2)>img {
+  width: 1em;
+  margin: 0.625em 0.6875em;
+}
+
+.header-store>nav>ul>li:nth-of-type(3)>a>img,
+.header-store>nav>ul>li:nth-of-type(4)>a>img {
+  width: 0.75em;
+  margin: 0.625em 0.6875em;
+}
+
+.main-store {
+  background: var(--secondary-bg-color);
+  padding: 2.1875em 0;
+  color: #3a3a3a;
+}
+
+/* Container products */
+.main-store>section:first-of-type {
+  color: #3a3a3a;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  padding: 2.125em 1.375em;
+  box-shadow: none;
+  border-radius: 0;
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 0;
+}
+
+.main-store>section:first-of-type>h2 {
+  font-size: 1.125em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  width: 100%;
+  margin-bottom: 2.12em;
+}
+
+/* Product */
+.main-store>section:first-of-type>article {
+  width: 45%;
+  height: fit-content;
+  text-align: left;
+  margin-bottom: 3em;
+}
+
+.main-store>section:first-of-type>article:nth-of-type(5) {
+  justify-content: flex-start;
+}
+
+.main-store>section:first-of-type>article>h3 {
+  font-size: 0.9em;
+}
+
+.main-store>section:first-of-type>article>img {
+  width: 100%;
+  height: 12em;
+}
+
+.main-store>section:first-of-type>article>p {
+  font-weight: 700;
+  font-size: 0.875em;
+}
+
+/* Button container */
+.main-store>section:first-of-type>div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+/* View all button */
+.main-store>section:first-of-type>div>button {
+  background: #3a3a3a;
+  color: var(--txt-light);
+  border: none;
+  border-radius: 0.3em;
+  text-transform: uppercase;
+  font-weight: var(--font-black);
+  letter-spacing: 0.08em;
+  padding: 0.5em 1em;
+  font-size: 0.8125em;
+}
+
+.main-store>section:nth-of-type(2) {
+  padding: 0 1.375em;
   display: flex;
   flex-direction: column;
 }
 
-.store>header>nav {
-  background: var(--secondary-bg-color);
-  width: 100%;
-  height: 20em;
+.main-store>section:nth-of-type(2)>img {
+  height: 19.875em;
+  margin: 3em 0;
 }
 
-.store>header>nav>ul>li>img,
- .store>header>nav>ul>li>a>img,{
-  width: 3em;
+.main-store>section:nth-of-type(2)>h2 {
+  font-size: 1.25em;
+  text-align: left;
+  margin-bottom: 1em;
 }
 
-.store>header>div {
-  width: 100%;
-  background: #ccc;
-  color: var(--txt-light);
+.main-store>section:nth-of-type(2)>p {
+  font-size: 0.875em;
 }
 
-.store>header>section {
-  width: 100%;
-  height: 20em;
-  background: url('../images/store-header-bg.png');
-  background-size: cover;
-} */
+/* Quote container */
+.main-store>section:nth-of-type(2)>div:first-of-type {
+  color: #3a3a3a;
+  text-align: center;
+  text-transform: none;
+  font-weight: normal;
+}
+
+.main-store>section:nth-of-type(2)>div:first-of-type>img {
+  width: 1.25rem;
+}
+
+.main-store>section:nth-of-type(2)>div:first-of-type>q {
+  font-size: 1rem;
+  margin: 1.875em 0;
+}
+
+/* Remove quotes from q tag */
+q:before, q:after {
+  content:''
+}
+
+.main-store>section:nth-of-type(2)>div>p {
+  font-size: 0.8125rem;
+}
+
+.main-store>section:nth-of-type(2)>div>p::before {
+  content: '\2014 \0020';
+}
